--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
 			"args": [
 				"-fdiagnostics-color=always",
 				"-g",
-				"${file}/",
+				"*.cpp",
 				"-o",
 				"${fileDirname}/${fileBasenameNoExtension}"
 			],
